- Added a new icon for the website - Created a color scheme for the website - Changed the websites components to match the new color scheme - Started on a hero section of the website - Started on the css of the hero section - Found a free video and added it to the videos folder - Fixed a lot of the css styling for the Navbar - Finished the rest of the nar bar section as well as styling - Removed unneeded css from App.css and index.css - Added lots of base css for App.css - Fixed the issue where the signup button would reappear on small screen sizes on page refresh.

--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,66 @@
+/* Colors
+#FFFFFF
+#3B413C
+#9DB5B2
+#DAF0EE
+#94D1BE */
+
+
+
+
+
 #root {
-
+  background-color: #FFFFFF;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
 }
 
 .card {
   padding: 2em;
+  background-color: #FFFFFF;
 }
 
-.read-the-docs {
-  color: #888;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'PT Sans', sans-serif;
+}
+
+.home,
+.services,
+.products,
+.sign-up {
+  display: flex;
+  height: 90vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+}
+
+.services {
+  background-image: url('/images/img-2.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
+}
+
+.products {
+  background-image: url('/images/img-1.jpg');
+  background-position: center;
+  background-size: fill;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
+}
+
+.sign-up {
+  background-image: url('/images/img-8.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
 }
