--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -16,7 +16,7 @@
     align-items: center;
     height: 80px;
     max-width: 1500px;
-    background-color: rgb(57, 33, 154);
+    background-color: #3B413C;
   }
   
   .navbar-logo {
@@ -47,7 +47,7 @@
   }
   
   .nav-item {
-    height: 80px;
+    height: 100px;
   }
   
   .nav-links {
@@ -60,12 +60,12 @@
   }
   
   .nav-links:hover {
-    border-bottom: 4px solid #fff;
+    border-bottom: 4px solid #9DB5B2;
     transition: all 0.2s ease-out;
   }
   
   .fa-bars {
-    color: #fff;
+    color: #9DB5B2;
   }
   
   .nav-links-mobile {
@@ -109,16 +109,16 @@
     }
   
     .nav-links:hover {
-      background-color: #fff;
-      color: #242424;
+      background-color: #9DB5B2;
+      color: #3B413C;
       border-radius: 0;
     }
   
     .navbar-logo {
       position: absolute;
-      top: 0;
+      top: 10;
       left: 0;
-      transform: translate(25%, 50%);
+      margin-left: 20px;
     }
   
     .menu-icon {
@@ -139,7 +139,7 @@
     .nav-links-mobile {
       display: block;
       text-align: center;
-      margin: 2rem auto;
+      margin: 0rem auto;
       border-radius: 4px;
       width: 80%;
       text-decoration: none;
@@ -147,13 +147,13 @@
       background-color: transparent;
       color: #fff;
       padding: 14px 20px;
-      border: 1px solid #fff;
+      border: 1px solid #9DB5B2;
       transition: all 0.3s ease-out;
     }
   
     .nav-links-mobile:hover {
-      background: #fff;
-      color: #242424;
+      background: #9DB5B2;
+      color: #3B413C;
       transition: 250ms;
     }
 
